--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ futures = "0.3.31"
 humantime-serde = "1.1.1"
 serde = { version = "1.0.219", features = ["derive"] }
 smart-default = "0.7.1"
-tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }
+tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "io-util"] }
 toml = "0.8.23"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
